combined front and lab 6

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
+body{
+  background: linear-gradient(62deg, #8EC5FC 0%, #E0C3FC 100%);
+}
 .App {
   text-align: center;
 }
@@ -12,7 +15,7 @@
     animation: App-logo-spin infinite 20s linear;
   }
 }
-
+/* 
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -22,11 +25,11 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-}
+} */
 
-.App-link {
+/* .App-link {
   color: #61dafb;
-}
+} */
 
 @keyframes App-logo-spin {
   from {
